@@ -1,7 +1,12 @@
 2002-11-04  Elena Zannoni  <ezannoni@redhat.com>
 
+	* interps.c (set_interpreter_cmd): Remove.
+
+2002-11-04  Elena Zannoni  <ezannoni@redhat.com>
+
 	* interps.c (interpreter_completer): Initialize alloced.
 	(struct gdb_interpreter): Reformat.
+	(set_interpreter_cmd): Remove.
 
 2002-11-04  Elena Zannoni  <ezannoni@redhat.com>
 
